deploysplunk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
  namespace: theo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
        - name: splunk
          image: splunk/splunk:latest
          ports:
            - containerPort: 8000  # Web UI
            - containerPort: 8088  # HEC endpoint
