servicesplunk.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: theo
spec:
  selector:
    app: splunk
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: hec
      protocol: TCP
      port: 8088
      targetPort: 8088
